devops-week6/frontend-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: frontend-permissive
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: PERMISSIVE
